Fix Kempe citation - remove et al. (single author)

--- a/ouroboros/research-paper.html
+++ b/ouroboros/research-paper.html
@@ -563,7 +563,7 @@ function selectiveDecay(pheromone, novelty) {
             <p style="margin-left: 40px; text-indent: -40px;">Theraulaz, Guy, and Eric Bonabeau. "A Brief History of Stigmergy." <em>Artificial Life</em>, vol. 5, no. 2, 1999, pp. 97-116.</p>
             <p style="margin-left: 40px; text-indent: -40px;">Shumaylov, Ilia, et al. "The Curse of Recursion: Training on Generated Data Makes Models Forget." <em>arXiv preprint</em> arXiv:2305.17493, 2023.</p>
             <p style="margin-left: 40px; text-indent: -40px;">Gerstgrasser, Matthias, et al. "Is Model Collapse Inevitable? Breaking the Curse of Recursion by Accumulating Real and Synthetic Data." <em>arXiv preprint</em> arXiv:2404.01413, 2024.</p>
-            <p style="margin-left: 40px; text-indent: -40px;">Kempe, Julia, et al. "Model Collapse Demystified: The Case of Regression." <em>arXiv preprint</em> arXiv:2402.07712, 2024.</p>
+            <p style="margin-left: 40px; text-indent: -40px;">Kempe, Julia. "Model Collapse Demystified: The Case of Regression." <em>arXiv preprint</em> arXiv:2402.07712, 2024.</p>
         </section>
 
         <div class="citation">
