Fix citation: Dohmatob, Feng & Kempe (not just Kempe)

--- a/ouroboros/model-collapse-myth.html
+++ b/ouroboros/model-collapse-myth.html
@@ -320,7 +320,7 @@
                 <ol>
                     <li>Shumaylov, I., et al. (2023). <em>The Curse of Recursion: Training on Generated Data Makes Models Forget.</em> arXiv:2305.17493 <a href="https://arxiv.org/abs/2305.17493" target="_blank">[link]</a></li>
                     <li>Gerstgrasser, M., et al. (2024). <em>Is Model Collapse Inevitable? Breaking the Curse of Recursion by Accumulating Real and Synthetic Data.</em> arXiv:2404.01413 <a href="https://arxiv.org/abs/2404.01413" target="_blank">[link]</a></li>
-                    <li>Kempe, Julia (2024). <em>Model Collapse Demystified: The Case of Regression.</em> arXiv:2402.07712 <a href="https://arxiv.org/abs/2402.07712" target="_blank">[link]</a></li>
+                    <li>Dohmatob, E., Feng, Y., & Kempe, J. (2024). <em>Model Collapse Demystified: The Case of Regression.</em> arXiv:2402.07712 <a href="https://arxiv.org/abs/2402.07712" target="_blank">[link]</a></li>
                 </ol>
             </div>
         </article>
