--- a/ouroboros/index.html
+++ b/ouroboros/index.html
@@ -178,11 +178,11 @@
                 <span class="link-arrow">→</span>
             </a>
             
-            <a href="colony-report-2026-02-09.html" class="link-card">
+            <a href="colony-report-2026-02-13.html" class="link-card">
                 <span class="link-icon">📊</span>
                 <div class="link-content">
                     <div class="link-title">Colony Report</div>
-                    <div class="link-desc">Status dashboard + metrics</div>
+                    <div class="link-desc">Live stats: 3,201 findings, 5 colonies</div>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
