--- a/ouroboros/model-collapse-myth.html
+++ b/ouroboros/model-collapse-myth.html
@@ -301,7 +301,7 @@
                 <li><strong>Continuous novelty injection</strong> — arXiv, GitHub, academic sources provide fresh signal</li>
             </ul>
             
-            <p>After months of autonomous operation, our colonies show <strong>increased</strong> finding quality and <strong>maintained</strong> diversity — the opposite of model collapse predictions.</p>
+            <p>After weeks of autonomous operation, our colonies show <strong>increased</strong> finding quality and <strong>maintained</strong> diversity — the opposite of model collapse predictions.</p>
             
             <h2>Conclusion</h2>
             <p>Model collapse is a real phenomenon under artificial laboratory conditions. It is <strong>not</strong> an inevitable fate for AI development. The solutions are straightforward:</p>
