--- a/ouroboros/research-paper.html
+++ b/ouroboros/research-paper.html
@@ -541,7 +541,7 @@ function selectiveDecay(pheromone, novelty) {
             </table>
             
             <h3>19.5 Empirical Evidence</h3>
-            <p>After months of autonomous operation, our colonies demonstrate the Anti-Ouroboros Effect:</p>
+            <p>After weeks of autonomous operation, our colonies demonstrate the Anti-Ouroboros Effect:</p>
             <ul>
                 <li><strong>Increasing quality:</strong> Breakthrough rate improved from 2% to 8% of findings</li>
                 <li><strong>Maintained diversity:</strong> Topic coverage expanded, not contracted</li>
