Change chart to 24-hour line chart

--- a/ouroboros/colony-dashboard.html
+++ b/ouroboros/colony-dashboard.html
@@ -137,7 +137,7 @@
             <div class="logo">🐍</div>
             <h1>Colony Dashboard</h1>
             <p class="subtitle">Live metrics from 5 federated research colonies</p>
-            <p class="generated">Last updated: Friday, February 13, 2026 at 03:53 AM UTC</p>
+            <p class="generated">Last updated: Friday, February 13, 2026 at 03:56 AM UTC</p>
         </header>
         
         <div class="stats-row">
@@ -154,12 +154,12 @@
                 <div class="stat-label">Self-Modifications</div>
             </div>
             <div class="stat-card">
-                <div class="stat-value purple">10,912</div>
+                <div class="stat-value purple">11,219</div>
                 <div class="stat-label">Pheromone Signals</div>
             </div>
         </div>
         
-        <div class="section-title">📈 Findings (Last 14 Days)</div>
+        <div class="section-title">📈 Findings (Last 24 Hours)</div>
         <div class="chart-container">
             <canvas id="findingsChart"></canvas>
         </div>
@@ -189,7 +189,7 @@
                 <div class="colony-focus">SQL, Networking, Speed</div>
                 <div class="colony-stats">
                     <div class="colony-stat"><span>Findings</span><span>648</span></div>
-                    <div class="colony-stat"><span>Pheromones</span><span>3,877</span></div>
+                    <div class="colony-stat"><span>Pheromones</span><span>4,106</span></div>
                     <div class="colony-stat"><span>Breakthroughs</span><span>0</span></div>
                     <div class="colony-stat"><span>Last Active</span><span>Unknown</span></div>
                 </div>
@@ -203,7 +203,7 @@
                 <div class="colony-focus">Evolutionary Algorithms</div>
                 <div class="colony-stats">
                     <div class="colony-stat"><span>Findings</span><span>549</span></div>
-                    <div class="colony-stat"><span>Pheromones</span><span>1,569</span></div>
+                    <div class="colony-stat"><span>Pheromones</span><span>1,647</span></div>
                     <div class="colony-stat"><span>Breakthroughs</span><span>0</span></div>
                     <div class="colony-stat"><span>Last Active</span><span>Unknown</span></div>
                 </div>
@@ -253,16 +253,20 @@
     <script>
         const ctx = document.getElementById('findingsChart').getContext('2d');
         new Chart(ctx, {
-            type: 'bar',
+            type: 'line',
             data: {
-                labels: ["Jan 31","Feb 1","Feb 2","Feb 3","Feb 4","Feb 5","Feb 6","Feb 7","Feb 8","Feb 9","Feb 10","Feb 11","Feb 12","Feb 13"],
+                labels: ["4 AM","5 AM","6 AM","7 AM","8 AM","9 AM","10 AM","11 AM","12 PM","1 PM","2 PM","3 PM","4 PM","5 PM","6 PM","7 PM","8 PM","9 PM","10 PM","11 PM","12 AM","1 AM","2 AM","3 AM"],
                 datasets: [{
                     label: 'New Findings',
-                    data: [0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                    backgroundColor: 'rgba(0, 212, 170, 0.6)',
+                    data: [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                    backgroundColor: 'rgba(0, 212, 170, 0.1)',
                     borderColor: 'rgba(0, 212, 170, 1)',
-                    borderWidth: 1,
-                    borderRadius: 4
+                    borderWidth: 2,
+                    fill: true,
+                    tension: 0.3,
+                    pointBackgroundColor: 'rgba(0, 212, 170, 1)',
+                    pointRadius: 3,
+                    pointHoverRadius: 6
                 }]
             },
             options: {
@@ -278,7 +282,7 @@
                         ticks: { color: 'rgba(255,255,255,0.5)' }
                     },
                     x: {
-                        grid: { display: false },
+                        grid: { color: 'rgba(255,255,255,0.03)' },
                         ticks: { color: 'rgba(255,255,255,0.5)', maxRotation: 45 }
                     }
                 }
