Rebrand messaging: AI solutions/simplify workflows (away from workforce replacement)

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Agents for Business | AIBridges - Cranston RI</title>
-    <meta name="description" content="AIBridges deploys AI agents that automate your business workflows. Monthly agentic office retainer, agent architecture, and team training. Cranston, RI.">
+    <meta name="description" content="AIBridges builds AI solutions that simplify your team's workflows. Custom integrations, automation, and ongoing support. We handle the tech — you handle the business. Cranston, RI.">
 
     <!-- Open Graph / Social Meta Tags -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://aibridges.org/">
-    <meta property="og:title" content="AI Agents for Business | AIBridges - Cranston RI">
-    <meta property="og:description" content="AIBridges deploys AI agents that automate your business workflows. Monthly agentic office retainer, agent architecture, and team training. Cranston, RI.">
+    <meta property="og:title" content="AI Solutions for Business | AIBridges - Cranston RI">
+    <meta property="og:description" content="AIBridges builds AI solutions that simplify your team's workflows. Custom integrations, automation, and ongoing support. We handle the tech — you handle the business. Cranston, RI.">
     <meta property="og:image" content="https://aibridges.org/og-image.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="AI Agents for Business | AIBridges">
-    <meta name="twitter:description" content="AIBridges deploys AI agents that automate your business workflows. Monthly agentic office retainer, agent architecture, and team training.">
+    <meta name="twitter:description" content="AIBridges builds AI solutions that simplify your team's workflows. Custom integrations, automation, and ongoing support. We handle the tech — you handle the business.">
 
     <!-- Geo Meta Tags for Local SEO -->
     <meta name="geo.region" content="US-RI">
@@ -3400,11 +3400,11 @@
         <div class="hero-content">
             <div class="hero-badge">
                 <span class="pulse"></span>
-                We Build & Deploy AI Agents for Business
+                We Build AI Solutions for Business
             </div>
             <h1>
-                <span class="gradient">Your AI Workforce</span><br>
-                Starts Here
+                <span class="gradient">Build AI Solutions.</span><br>
+                Simplify Everything.
             </h1>
             <p class="hero-subtitle">
                 <span class="typewriter" id="typewriter">
@@ -3418,7 +3418,7 @@
                 </a>
                 <a href="#services" class="btn btn-secondary ripple" role="button">
                     <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M8 5v14l11-7z"/></svg>
-                    See Agent Services
+                    See Our Services
                 </a>
             </div>
 
@@ -3426,7 +3426,7 @@
             <div class="free-lesson" role="article" style="display:none;">
                 <span class="free-tag">Monthly Retainer</span>
                 <h3>The Agentic Office</h3>
-                <p>A team of AI agents, deployed to your business, handling real work every day. We set them up, monitor them, and refine them monthly. You just see the results.</p>
+                <p>AI integrated into your daily operations — automating the repetitive stuff so your team can focus on higher-value work. We set it up, monitor it, and refine it monthly.</p>
                 <a href="#contact" class="btn btn-secondary ripple" role="button">Learn More <span aria-hidden="true">→</span></a>
             </div>
         </div>
@@ -3456,21 +3456,21 @@
     <section class="neuron-showcase">
         <div class="neuron-showcase-inner">
             <div class="neuron-text reveal">
-                <h2>Intelligence That <span class="gradient">Never Sleeps</span></h2>
-                <p>Our AI agents process, learn, and adapt around the clock. Like neurons firing in a living brain, your AI workforce connects the dots across every workflow — email triage, document review, data entry — without fatigue, without errors.</p>
-                <p>The result? Your team focuses on decisions. The agents handle everything else.</p>
+                <h2>Let Us Handle <span class="gradient">the Tech</span></h2>
+                <p>We integrate AI into your existing workflows so your team can focus on what matters. Email triage, document review, data entry — automated and running smoothly, while you stay in control.</p>
+                <p>You handle the business. We handle the technology behind it.</p>
                 <div class="neuron-stats">
                     <div class="neuron-stat">
                         <span class="num">24/7</span>
-                        <span class="label">Uptime</span>
+                        <span class="label">Availability</span>
                     </div>
                     <div class="neuron-stat">
                         <span class="num">10x</span>
-                        <span class="label">Throughput</span>
+                        <span class="label">Faster</span>
                     </div>
                     <div class="neuron-stat">
-                        <span class="num">0</span>
-                        <span class="label">Burnout</span>
+                        <span class="num">100%</span>
+                        <span class="label">Supported</span>
                     </div>
                 </div>
             </div>
@@ -3619,7 +3619,7 @@
             <div class="section-header reveal">
                 <span class="section-badge">Services</span>
                 <h2 class="section-title">Everything Your Business Needs</h2>
-                <p class="section-subtitle">AI agents, cloud infrastructure, custom development, and ongoing support — your complete technology partner.</p>
+                <p class="section-subtitle">AI integrations, cloud infrastructure, custom development, and ongoing support — your complete technology partner.</p>
             </div>
 
             <div class="more-services-grid">
@@ -3944,8 +3944,8 @@
     <section id="contact" class="cta-section">
         <div class="section-container">
             <div class="cta-content reveal">
-                <h2>Let's Build Your Agent Workforce</h2>
-                <p>Tell us what your team spends too much time on. We'll show you which tasks AI agents can handle — and what it will cost. No pressure, no jargon.</p>
+                <h2>Let's Simplify Your Workflows</h2>
+                <p>Tell us what your team spends too much time on. We'll show you how AI can streamline it — and what it'll cost. No pressure, no jargon.</p>
 
                 <!-- Contact Form -->
                 <form action="https://formspree.io/f/mvzrqler" method="POST" class="contact-form" style="max-width: 500px; margin: 2rem auto 0; text-align: left;">
@@ -4466,10 +4466,10 @@
         // Typewriter effect
         const typewriterText = document.querySelector('.typewriter-text');
         const phrases = [
-            'AI agents that run your back office.',
-            'Automated workflows. Real cost savings.',
-            'We built it. We run it. We refine it.',
-            'Your agentic office, managed monthly.'
+            'Simplify your team\'s workflows with AI.',
+            'We handle the tech. You handle the business.',
+            'Custom AI solutions. Ongoing support.',
+            'Built for your process, not the other way around.'
         ];
         let phraseIndex = 0;
         let charIndex = 0;
